--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -20,7 +20,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Values.backend.portalmaintenance.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.portalmaintenance.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "portal.labels" . | nindent 4 }}
@@ -32,7 +32,7 @@ spec:
         spec:
           restartPolicy: OnFailure
           containers:
-          - name: {{ .Values.backend.portalmaintenance.name }}
+          - name: {{ include "portal.fullname" . }}-{{ .Values.backend.portalmaintenance.name }}
             securityContext:
               allowPrivilegeEscalation: false
               capabilities:
