--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -20,7 +20,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Values.backend.processesworker.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "portal.labels" . | nindent 4 }}
@@ -33,7 +33,7 @@ spec:
         spec:
           restartPolicy: OnFailure
           containers:
-          - name: {{ .Values.backend.processesworker.name }}
+          - name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
             securityContext:
               allowPrivilegeEscalation: false
               capabilities:
