--- a/charts/portal/templates/job-backend-provisioning-migrations.yaml
+++ b/charts/portal/templates/job-backend-provisioning-migrations.yaml
@@ -20,7 +20,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .Values.backend.provisioningmigrations.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.provisioningmigrations.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "portal.labels" . | nindent 4 }}
@@ -31,11 +31,11 @@ metadata:
 spec:
   template:
     metadata:
-      name: {{ .Values.backend.provisioningmigrations.name }}
+      name: {{ include "portal.fullname" . }}-{{ .Values.backend.provisioningmigrations.name }}
     spec:
       restartPolicy: Never
       containers:
-      - name: {{ .Values.backend.provisioningmigrations.name }}
+      - name: {{ include "portal.fullname" . }}-{{ .Values.backend.provisioningmigrations.name }}
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
