--- a/charts/portal/templates/service-backend-administration.yaml
+++ b/charts/portal/templates/service-backend-administration.yaml
@@ -20,7 +20,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.backend.administration.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.administration.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "portal.labels" . | nindent 4 }}
