chore: consolidate labels

--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -27,6 +27,9 @@ metadata:
 spec:
   schedule: "0 0 * * *"
   jobTemplate:
+    metadata:
+      labels:
+        {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
       template:
         spec:
