--- a/charts/portal/templates/service-backend-notification.yaml
+++ b/charts/portal/templates/service-backend-notification.yaml
@@ -30,4 +30,4 @@ spec:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
-    app: {{ .Values.backend.notification.name }}
+    {{- include "portal.selectorLabels" . | nindent 4 }}
