--- a/charts/portal/templates/service-frontend-registration.yaml
+++ b/charts/portal/templates/service-frontend-registration.yaml
@@ -30,4 +30,4 @@ spec:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
-    app: {{ .Values.frontend.registration.name }}
+    {{- include "portal.selectorLabels" . | nindent 4 }}
