--- a/charts/portal/templates/configmap-backend-postgres-init.yaml
+++ b/charts/portal/templates/configmap-backend-postgres-init.yaml
@@ -21,8 +21,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.postgresql.primary.initdb.scriptsConfigMap }}
+  name: {{ .Release.Name }}-portal-cm-postgres
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 data:
   01-init-db-user.sh: |
     postgresql_create_portal_user() {
