Revert "feat(helm-chart): define unique resource names (#189)"
This reverts commit 659328314428e780ce745bf3fdc872911789a25e.

--- a/charts/portal/templates/configmap-backend-postgres-init.yaml
+++ b/charts/portal/templates/configmap-backend-postgres-init.yaml
@@ -21,10 +21,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-portal-cm-postgres
+  name: {{ .Values.postgresql.primary.initdb.scriptsConfigMap }}
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "portal.labels" . | nindent 4 }}
 data:
   01-init-db-user.sh: |
     postgresql_create_portal_user() {
