--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -20,22 +20,16 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "portal.fullname" . }}-{{ .Values.backend.portalmaintenance.name }}
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "portal.labels" . | nindent 4 }}
+  name: {{ .Values.backend.portalmaintenance.name }}
 spec:
   schedule: "0 0 * * *"
   jobTemplate:
-    metadata:
-      labels:
-        {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
       template:
         spec:
           restartPolicy: OnFailure
           containers:
-          - name: {{ include "portal.fullname" . }}-{{ .Values.backend.portalmaintenance.name }}
+          - name: {{ .Values.backend.portalmaintenance.name }}
             securityContext:
               allowPrivilegeEscalation: false
               capabilities:
