--- a/charts/portal/templates/service-backend-administration.yaml
+++ b/charts/portal/templates/service-backend-administration.yaml
@@ -20,14 +20,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "portal.fullname" . }}-{{ .Values.backend.administration.name }}
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "portal.labels" . | nindent 4 }}
+  name: {{ .Values.backend.administration.name }}
 spec:
   type: ClusterIP
   ports:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
-    {{- include "portal.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.backend.administration.name }}
