--- a/charts/portal/templates/service-backend-appmarketplace.yaml
+++ b/charts/portal/templates/service-backend-appmarketplace.yaml
@@ -30,4 +30,5 @@ spec:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
+    app: {{ include "portal.fullname" . }}-{{ .Values.backend.appmarketplace.name }}
     {{- include "portal.selectorLabels" . | nindent 4 }}
