--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -20,17 +20,22 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Values.backend.processesworker.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 spec:
   schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
   jobTemplate:
+    metadata:
+      name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
     spec:
       template:
         spec:
           restartPolicy: OnFailure
           containers:
-          - name: {{ .Values.backend.processesworker.name }}
+          - name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
             securityContext:
               allowPrivilegeEscalation: false
               capabilities:
