--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -20,21 +20,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.backend.appmarketplace.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.appmarketplace.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   strategy:
     {{- toYaml .Values.updateStrategy | nindent 4 }}
   selector:
     matchLabels:
-      app: {{ .Values.backend.appmarketplace.name }}
+      app: {{ include "portal.fullname" . }}-{{ .Values.backend.appmarketplace.name }}
+      {{- include "portal.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: {{ .Values.backend.appmarketplace.name }}
+        app: {{ include "portal.fullname" . }}-{{ .Values.backend.appmarketplace.name }}
+        {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
       containers:
-      - name: {{ .Values.backend.appmarketplace.name }}
+      - name: {{ include "portal.fullname" . }}-{{ .Values.backend.appmarketplace.name }}
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
