--- a/charts/portal/templates/service-backend-notification.yaml
+++ b/charts/portal/templates/service-backend-notification.yaml
@@ -20,11 +20,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.backend.notification.name }}
+  name: {{ include "portal.fullname" . }}-{{ .Values.backend.notification.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
   - port: {{ .Values.portService }}
     targetPort: {{ .Values.portContainer }}
   selector:
-    app: {{ .Values.backend.notification.name }}
+    app: {{ include "portal.fullname" . }}-{{ .Values.backend.notification.name }}
+    {{- include "portal.selectorLabels" . | nindent 4 }}
