--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -17,8 +17,6 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-name: "portal"
-
 # -- Provide portal base address.
 portalAddress: "https://portal.example.org"
 
@@ -56,6 +54,7 @@ frontend:
   # -- Portal frontend ingress parameters,
     # enable ingress record generation for portal frontend.
     enabled: false
+    name: "frontend"
     className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$1"
@@ -142,7 +141,7 @@ backend:
   # -- Portal-backend ingress parameters,
     # enable ingress record generation for portal-backend.
     enabled: false
-    name: "portal-backend"
+    name: "backend"
     className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/use-regex: "true"
@@ -868,7 +867,7 @@ postgresql:
     # -- Extended PostgreSQL Primary configuration (increase of max_connections recommended - default is 100)
     extendedConfiguration: ""
     initdb:
-      scriptsConfigMap: "configmap-postgres-init"
+      scriptsConfigMap: "{{ .Release.Name }}-portal-cm-postgres"
     extraEnvVars:
       - name: "PORTAL_PASSWORD"
         valueFrom:
