chore: use unique templates in ingresses

--- a/charts/portal/templates/ingress-frontend.yaml
+++ b/charts/portal/templates/ingress-frontend.yaml
@@ -36,7 +36,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "chart.labels" . | nindent 4 }}
+    {{- include "portal.labels" . | nindent 4 }}
   {{- with .Values.frontend.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
