--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -152,7 +152,11 @@ backend:
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
     onboardingServiceProvider:
-      encryptionKey: "<path:portal/data/beta/administration#onboardingserviceprovider-encryption-key>"
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/beta/administration#onboardingserviceprovider-encryption-key0>"
+        index1:
+          encryptionKey: "<path:portal/data/beta/administration#onboardingserviceprovider-encryption-key1>"
     swaggerEnabled: true
 
   provisioning:
@@ -235,7 +239,11 @@ backend:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/beta/processes-worker#offerprovider-client-secret>"
     onboardingServiceProvider:
-      encryptionKey: "<path:portal/data/beta/processes-worker#process-onboardingserviceprovider-encryption-key>"
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/beta/processes-worker#process-onboardingserviceprovider-encryption-key0>"
+        index1:
+          encryptionKey: "<path:portal/data/beta/processes-worker#process-onboardingserviceprovider-encryption-key1>"
 
 postgresql:
   auth:
